--- a/about_myself.html
+++ b/about_myself.html
@@ -11,7 +11,7 @@
 	<h4><u>Контакты</u></h4>
 	<p><u><li>LinkedIn<br><li>Facebook<br><li>Instagram</li></u></p>
 	<p><div><b>День рождения:</b><br>6 декабря 1976г<br><b>Родной город:</b><br>Новая Каховка</div></p>
-	<p><div><b>Умею:</b><br>- шить<br>- вязать<br>- готовить кушать</div></p>
+	<p><div><b>Умею:</b><br>- петь<br>- смеяться<br>- рисовать</div></p>
 	<p><div><b>Хочу:</b><br>- нравиться хорошему парню<br>- быть счастливой</div></p>
 </body>
 </html>
