changes for base structure

--- a/IraAta homework.html
+++ b/IraAta homework.html
@@ -4,45 +4,43 @@
 	<meta charset="utf-8">
 	<title>IraAtaHW</title>
 	<style type="text/css">
-		.center{
+		.center {
 			text-align: center;
 		}
-		.borderDiv{border: 5px solid lightgrey;
+		#container {
+			border: 5px solid lightgrey;
 		}
-		</style>
+		#bottom {
+			display: flex;
+		}
+	</style>
 </head>
 <body>
-	<div class="borderDiv lightgrey">
-	<div class="center">
-		<h2>Curriculum vitae</h2>
+	<div id="container">
+		<div id="top">
+			<h2>Curriculum vitae</h2>
 		</div>
-	<div>
-		<p><h1>Irina</h1></p>
-		<p><u><h1>Atamanchuk</h1></u></p>
+		<div id="bottom">
+			<div id="leftSide">
+				<h1>Irina</h1>
+				<h2>Atamanchuk</h2>
+				<h3>I like:</h3>
+				<p>first</p>
+				<p>second</p>
+				<p>third</p>
+				<h3>Contacts</h3>
+				<ul>
+					<li>
+						<a href="http://www.facebook.com">Facebook</a>
+					</li>
+					<li>..............VK</li>
+					<li>..............Ok</li>
+				</ul>
+			</div>
+			<div id="rightSide">
+
+			</div>			
+		</div>
 	</div>
-	<div>
-		<p><h3><u>I like:</u></h3></p>
-		<p>first</p>
-		<p>second</p>
-		<p>third</p>
-		<p><h3><u>Contacts</u></h3>
-			<ul><h4>
-				<li>Facebook</li>
-				<li>VK</li>
-				<li>Ok</li>
-				</h4>
-			</ul>
-		</p>
-	</div>
-		<p>
-			<table>
-				<tr>
-					<td colspan="2">Curricilum vitae</td>
-				</tr>
-				<tr>
-					<td>Irina</td>
-					<td rowspan="2">Birthday</td>
-				</tr>
-			</table>
-		</p>
-	</h1></p></div></div></body></html>
+</body>
+</html>
