--- a/IraAta.html
+++ b/IraAta.html
@@ -3,21 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>IraAta</title>
-	<link rel="stylesheet" href="style.css" />
-	<style type="text/css">
-		.center {
-			text-align: center;
-		}
-		.line{
-			text-decoration: underline;
-		}
-		#container {
-			border: 5px solid lightgrey;
-		}
-		#bottom {
-			display: flex;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<div id="container">
@@ -26,22 +12,21 @@
 		</div>
 		<div id="bottom">
 			<div id="leftSide">
-				<p class="center"><img src="C:\Users\Irinaa\1qahtml\picture.jpg" alt="Picture"></p>
-				<h1>Irina</h1>
-				<h1 class="line">Atamanchuk</h1>
-				<h3 class="line">I like:</h3>
-				<p>first</p>
-				<p>second</p>
-				<p>third</p>
-				<h3 class="line">Contacts</h3>
+				<img src="C:\Users\Irinaa\1qahtml\picture.jpg" alt="Picture">
+				<p id="name">Irina Atamanchuk</p>
+				<p id="caption">I like:</p>
+				<p id="first">Guitar</p>
+				<p id="second">Driving</p>
+				<p id="third">Neurosurgeons</p>
+				<p id="caption">Contacts</p>
 				<ul>
 					<li>
-						<a href="https://www.facebook.com/irinacelltickua.celltick">Facebook</a>
+						<a id="linkColor" href="https://www.facebook.com/irinacelltickua.celltick">Facebook</a>
 					</li>
 					<li>
-						<a href="https://www.linkedin.com/in/irina-atamanchuk-67702899/">LinkedIn</a>
+						<a id="linkColor" href="https://www.linkedin.com/in/irina-atamanchuk-67702899/">LinkedIn</a>
 					</li>
-					<li><a href="https://www.instagram.com/irynaatamanchuk/">Instagram</a>
+					<li><a id="linkColor"href="https://www.instagram.com/irynaatamanchuk/">Instagram</a>
 					</li>
 				</ul>
 			</div>
@@ -49,19 +34,16 @@
 				<h3>Birthday:</h3>
 				<p>6 December 1976</p>
 				<h3>Place of birth:</h3>
-				<p>Crimea</p>
+				<p id="line">Crimea</p>
 				<h3>Soft skills:</h3>
-				<ul>
-					<li>Word</li>
-					<li>Excel</li>
-					<li>Paint</li>
-				</ul>
-				<h3>About myself</h3>
-				<ul>
-					<li>Smart</li>
-					<li>Friendly</li>
-				</ul>
-			</div>			
+				<p>- Word</p>
+				<p>- Excel</p>
+				<p id="line">- Paint</p>
+				<h3>About myself:</h3>
+				<p>- Smart</p>
+				<p id="line">- Friendly</p>
+				</div>
+			</div>		
 		</div>
 	</div>
 </body>
